--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["sfisol <wolfmoon@o2.pl>"]
 edition = "2018"
 
 [dependencies]
-actix-web = { version = "3.2.0" }
-# actix-web = { version = "3.2.0", features = ["rustls"] }
-procinfo = "0.4.2"
-# jemallocator = "0.3.2"
+actix-web = { version = "3.2.0", features = ["openssl"] }
+openssl = "0.10"
+procinfo = "0.4"
